--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -30,7 +30,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages/>
+                    <apex:messages />
                 </div>
 
                 <apex:form id="SummitEventRegisterForm" styleClass="slds-grid slds-wrap">
@@ -465,7 +465,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </apex:outputPanel>
 
 
-                        <!-- MAILING ADDRESS OF PRIMARY REGISTRANT -->
+                        <!-- Mailing Address registration (optional)-->
                         <apex:outputPanel layout="none" rendered="{!eventPage.Ask_Mailing_Address__c != 'Do not ask' && eventPage.Ask_Mailing_Address__c != null}">
 
                             <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
@@ -747,7 +747,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 </div>
                             </apex:outputPanel>
 
-                            <!-- ADDITIONAL QUESTION FORM GENERATOR -->
+                            <!-- Free from additional questions as defined in event -->
                             <apex:repeat value="{!questionNum}" var="q">
                                 <apex:outputPanel layout="none" rendered="{!IF(!ISBLANK(eventPage['Add_Info_Question_Text_' + q + '__c']),true, false)}">
                                     <apex:variable var="isRequired" value="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'],'required'),true, false)}"/>
@@ -758,7 +758,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                             </apex:outputLabel>
                                             <div class="slds-form-element__control">
 
-                                                <!-- ADDITIONAL QUESTION TEXTAREA -->
+                                                <!--Text area -->
                                                 <apex:outputPanel layout="none" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Text area'), true, false)}" >
                                                     <div class="slds-form-element__control">
                                                         <apex:inputTextarea label="{!'AddInfo' + q}" value="{!newEvtReg['Add_Info_Answer_' + q + '__c']}" required="true" styleClass="slds-input" rendered="{!isRequired}"/>
@@ -766,7 +766,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                                     </div>
                                                 </apex:outputPanel>
 
-                                                <!-- ADDITIONAL QUESTION TEXT BOX -->
+                                                <!--Text box-->
                                                 <apex:outputPanel layout="none" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'],'Text box'), true, false)}">
                                                     <div class="slds-form-element__control">
                                                         <apex:inputText label="{!'AddInfo' + q}" value="{!newEvtReg['Add_Info_Answer_' + q + '__c']}" required="true" styleClass="slds-input" rendered="{!isRequired}"/>
@@ -774,7 +774,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                                     </div>
                                                 </apex:outputPanel>
 
-                                                <!-- ADDITIONAL QUESTION PICK LIST -->
+                                                <!--Pick List-->
                                                 <apex:outputPanel layout="none" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Pick-list'), true, false)}">
                                                     <div class="slds-select_container">
                                                         <apex:selectList label="{!'AddInfo' + q}" value="{!newEvtReg['Add_Info_Answer_' + q + '__c']}" size="1" required="true" rendered="{!isRequired}" styleClass="slds-select">
@@ -793,14 +793,13 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                             </apex:repeat>
                         </apex:outputPanel>
 
-                        <!-- SUBMIT BUTTONS -->
+                        <!-- Submit buttons -->
                         <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
                             <apex:commandLink action="{!saveContactRegistration}" onClick="fadeout(); return checkForm();" Value="{!IF(evtHasAppointments, 'Next', 'Register')}" id="submitReg1" styleClass="slds-button slds-button_brand button confirmContinue"/>
                         </div>
                         <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
                             <apex:outputText escape="false" value="{!eventPage.Event_Footer__c}"></apex:outputText>
                         </div>
-
                     </apex:outputPanel>
                 </apex:form>
                 <!-- Event is closed message generated from event definition -->
