--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -45,19 +45,9 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         <apex:param name="phoneSetting" value="" assignTo="{!phoneType}"></apex:param>
                     </apex:actionFunction>
 
-                    <!-- EVENT DESCRIPTION -->
+                    <!-- EVENT BREADCRUMB -->
                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                        <nav role="navigation" aria-label="Breadcrumbs">
-                            <ol class="slds-breadcrumb slds-list--horizontal">
-                                <li class="slds-breadcrumb__item slds-text-title--caps"><a href="javascript:void(0);">{!evtInstance.Event__r.Event_Name__c}</a></li>
-                                <apex:outputPanel layout="none" rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}">
-                                    <li class="slds-breadcrumb__item slds-text-title--caps"><a href="javascript:void(0);">{!evtInstance.Instance_Title__c}</a></li>
-                                </apex:outputPanel>
-                                <apex:outputPanel layout="none" styleClass="eventDate" rendered="{!IF(!ISBLANK(evtInstance.Start_Date_Time__c) && !ISBLANK(evtInstance.Start_Date_Time__c),true,false)}">
-                                    <li class="slds-breadcrumb__item slds-text-title--caps"><a href="javascript:void(0);">{!eventStartDateTimeCrumb}</a></li>
-                                </apex:outputPanel>
-                            </ol>
-                        </nav>
+                        <apex:outputText escape="false" value="{!navBreadCrumb}"/>
                     </div>
                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
                         <h2 class="slds-text-heading_large">
@@ -795,7 +785,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                         <!-- Submit buttons -->
                         <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                            <apex:commandLink action="{!saveContactRegistration}" onClick="fadeout(); return checkForm();" Value="{!IF(evtHasAppointments, 'Next', 'Register')}" id="submitReg1" styleClass="slds-button slds-button_brand button confirmContinue"/>
+                            <apex:commandLink action="{!saveContactRegistration}" onClick="fadeout(); return checkForm();" Value="{!IF(evtHasAppointments, 'Next', 'Register')}" id="submitReg1" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                         </div>
                         <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
                             <apex:outputText escape="false" value="{!eventPage.Event_Footer__c}"></apex:outputText>
