--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -9,7 +9,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
     <apex:composition template="{!templateSelected}">
         <apex:define name="metaPageTitle">
             {!eventPage.Event_Name__c}
-            <apex:outputText rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}" value="{! ' - ' + evtInstance.Instance_Title__c}" />
+            <apex:outputText rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}" value="{! ' - ' + evtInstance.Instance_Title__c}"/>
             - Options
         </apex:define>
         <apex:define name="pageTitle"><a href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
@@ -20,67 +20,53 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         </apex:define>
         <apex:define name="sectionNav"/>
         <apex:define name="body">
-            <div class="row">
-                <div class="columns errorMessages">
+            <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
+                <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
                     <apex:messages />
-                    <apex:outputText escape="false" value="{!test}"/>
                 </div>
-            </div>
-            <apex:form id="SummitEventsRegisterAppointmentsForm" html-data-abide="ajax" html-novalidate="novalidate">
-                <div class="row">
-                    <div class="columns eventCrumb">
-                        <span class="eventName">{!eventPage.Event_Name__c}</span>
-                        <span class="bc-spacer"><span>»</span></span>
-                        <apex:outputPanel layout="none" rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}">
-                            <span class="eventInstance">{!evtInstance.Instance_Title__c}</span>
-                        </apex:outputPanel>
-                        <apex:outputPanel layout="inline" styleClass="eventDate" rendered="{!IF(!ISBLANK(evtInstance.Start_Date_Time__c) && !ISBLANK(evtInstance.Start_Date_Time__c),true,false)}">
-                            <span class="bc-spacer"><span>»</span></span>
-                            {!eventStartDateTimeCrumb}
-                        </apex:outputPanel>
+                <apex:form id="SummitEventsRegisterAppointmentsForm" styleClass="slds-grid slds-wrap">
+                    <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <apex:outputText escape="false" value="{!navBreadCrumb}"/>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <h2>
+                    <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
                             <apex:outputText escape="false" value="{!eventPage.Event_Appointment_Title__c}"/>
                         </h2>
-                        <p>
+                        <p class="slds-text-body slds-p-vertical_xx-small">
                             <apex:outputText escape="false" value="{!eventPage.Event_Appointment_Description__c}"/>
                         </p>
                     </div>
-                </div>
-                <div class="row">
-                    <apex:outputPanel layout="block" styleClass="columns small-12 menium-6 large-6" rendered="{!!noOptionalAppointments}">
-                        <h4>Choose your options</h4>
+                    <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 slds-medium-size_1-of-2 slds-large-size_1-of-2 slds-p-vertical_x-small slds-p-vertical_xx-small slds-p-right_medium" rendered="{!!noOptionalAppointments}">
+                        <h4 class="slds-text-heading_medium slds-p-vertical_xx-small">Choose your options</h4>
                         <div id="chooser">
-                            <apex:outputText escape="false" value="{!apptFormatted}"/>
+                            <apex:outputText escape="false" value="{!appointments}"/>
                         </div>
                         <apex:outputPanel rendered="{!requiredAppt}" layout="inline" styleClass="requiredSelectionLabel">* Selection required.</apex:outputPanel>
                     </apex:outputPanel>
-                    <div class="{!IF(noOptionalAppointments, 'columns small-12 menium-12 large-12', 'columns small-12 menium-6 large-6')}">
-                        <h4>Selected options</h4>
+                    <apex:outputPanel layout="block" styleClass="slds-col slds-size_1-of-1 {!IF(!noOptionalAppointments, 'slds-medium-size_1-of-2 slds-large-size_1-of-2', '')} slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <h4 class="slds-text-heading_medium slds-p-vertical_xx-small">Selected options</h4>
                         <div id="choosen">
                             <apex:outputText escape="false" value="{!chosenFormatted}"/>
                         </div>
-                        <p>&nbsp;</p>
-                        <p><em>Once you have selected all your appointments click next.</em></p>
-                        <p>
-                            <apex:commandLink action="{!saveOptions}" onClick="fadeout(); return populateApptJSON();" Value="Next" id="submitOptions" styleClass="button confirmContinue"/>
-                            <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="button previous"/>
+                    </apex:outputPanel>
+
+                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <p class="slds-text-body slds-p-vertical_xx-small"><em>Once you have selected all your appointments click next.</em></p>
+                        <p class="slds-text-body slds-p-vertical_xx-small">
+                            <apex:commandLink action="{!saveOptions}" onClick="fadeout(); return populateApptJSON();" Value="Next" id="submitOptions" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                            <apex:commandLink action="{!previousPage}" onClick="fadeout();" Value="Previous" id="previousPage" styleClass="slds-button slds-button_neutral slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                         </p>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="column">
-                        <p>
+
+                    <div class="slds-col slds-size_1-of-1 slds-clearfix slds-p-vertical_x-small slds-p-vertical_xx-small">
+                        <p class="slds-text-body ">
                             <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"></apex:outputText>
                         </p>
                     </div>
-                </div>
-                <apex:inputHidden id="outgoingApptJSon" value="{!incomingApptJSon}"/>
-            </apex:form>
-            <apex:outputText escape="false" value="{!eventPage.Tracking_Options_Registration__c}"></apex:outputText>
+                    <apex:inputHidden id="outgoingApptJSon" value="{!incomingApptJSon}"/>
+                </apex:form>
+                <apex:outputText escape="false" value="{!eventPage.Tracking_Options_Registration__c}"></apex:outputText>
+            </div>
         </apex:define>
     </apex:composition>
 </apex:page>
