--- a/force-app/main/default/layouts/Summit_Events_Fee_Attribute__c-Summit Events Fee Attribute Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Fee_Attribute__c-Summit Events Fee Attribute Layout.layout-meta.xml
@@ -82,20 +82,20 @@
         <fields>NAME</fields>
         <relatedList>Summit_Events__c.Event_Fee_Additional_Attribute__c</relatedList>
     </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
-        <fields>Start_Date_Time__c</fields>
-        <fields>Capacity__c</fields>
-        <fields>Count_of_Attendees__c</fields>
-        <relatedList>Summit_Events_Instance__c.Event_Instance_Fee_Attribute__c</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <fields>NAME</fields>
-        <fields>Start_Date_Time__c</fields>
-        <fields>Capacity__c</fields>
-        <fields>Count_of_Attendees__c</fields>
-        <relatedList>Summit_Events_Instance__c.Event_Instance_Fee_Additional_Attribute__c</relatedList>
-    </relatedLists>
+<!--    <relatedLists>-->
+<!--        <fields>NAME</fields>-->
+<!--        <fields>Start_Date_Time__c</fields>-->
+<!--        <fields>Capacity__c</fields>-->
+<!--        <fields>Count_of_Attendees__c</fields>-->
+<!--        <relatedList>Summit_Events_Instance__c.Event_Instance_Fee_Attribute__c</relatedList>-->
+<!--    </relatedLists>-->
+<!--    <relatedLists>-->
+<!--        <fields>NAME</fields>-->
+<!--        <fields>Start_Date_Time__c</fields>-->
+<!--        <fields>Capacity__c</fields>-->
+<!--        <fields>Count_of_Attendees__c</fields>-->
+<!--        <relatedList>Summit_Events_Instance__c.Event_Instance_Fee_Additional_Attribute__c</relatedList>-->
+<!--    </relatedLists>-->
     <relatedLists>
         <fields>NAME</fields>
         <relatedList>Summit_Events_Appointment_Type__c.Appointment_Fee_Attribute__c</relatedList>
