--- a/force-app/main/default/layouts/Summit_Events_Instance__c-UDAR Event Instance Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Instance__c-UDAR Event Instance Layout.layout-meta.xml
@@ -140,33 +140,33 @@
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
-    <layoutSections>
-        <customLabel>true</customLabel>
-        <detailHeading>true</detailHeading>
-        <editHeading>true</editHeading>
-        <label>Event Fees (Additive if on Event object)</label>
-        <layoutColumns>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Event_Instance_Fee__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Event_Instance_Fee_Attribute__c</field>
-            </layoutItems>
-        </layoutColumns>
-        <layoutColumns>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Event_Instance_Fee_Additional__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Event_Instance_Fee_Additional_Attribute__c</field>
-            </layoutItems>
-        </layoutColumns>
-        <style>TwoColumnsLeftToRight</style>
-    </layoutSections>
+<!--    <layoutSections>-->
+<!--        <customLabel>true</customLabel>-->
+<!--        <detailHeading>true</detailHeading>-->
+<!--        <editHeading>true</editHeading>-->
+<!--        <label>Event Fees (Additive if on Event object)</label>-->
+<!--&lt;!&ndash;        <layoutColumns>&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            <layoutItems>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                <behavior>Edit</behavior>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;                <field>Event_Instance_Fee__c</field>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            </layoutItems>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;            <layoutItems>&ndash;&gt;-->
+<!--&lt;!&ndash;                <behavior>Edit</behavior>&ndash;&gt;-->
+<!--&lt;!&ndash;                <field>Event_Instance_Fee_Attribute__c</field>&ndash;&gt;-->
+<!--&lt;!&ndash;            </layoutItems>&ndash;&gt;-->
+<!--&lt;!&ndash;        </layoutColumns>&ndash;&gt;-->
+<!--        <layoutColumns>-->
+<!--            <layoutItems>-->
+<!--                <behavior>Edit</behavior>-->
+<!--                <field>Event_Instance_Fee_Additional__c</field>-->
+<!--            </layoutItems>-->
+<!--            <layoutItems>-->
+<!--                <behavior>Edit</behavior>-->
+<!--                <field>Event_Instance_Fee_Additional_Attribute__c</field>-->
+<!--            </layoutItems>-->
+<!--        </layoutColumns>-->
+<!--        <style>TwoColumnsLeftToRight</style>-->
+<!--    </layoutSections>-->
     <layoutSections>
         <customLabel>true</customLabel>
         <detailHeading>true</detailHeading>
