--- a/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
+++ b/force-app/main/default/staticresources/SummitEventsAssets/css/main.css
@@ -1,6 +1,6 @@
 .slds-is-required label {font-weight: bold;}
 .slds-form-element .slds-form-element__help {display:none;}
-
+.slds-has-error {border-color:red!important;}
 /* SummitEventsStyles */
 .waiting-overlay {
     text-align: center;
@@ -43,27 +43,6 @@ label.required {
 .eventClosed, .eventClosed * {
     color: gray !important;
 }
-
-
-
-/*Choosen*/
-
-
-/*.movingBox {*/
-/*    background-color: #976dad;*/
-/*    position: absolute;*/
-/*    z-index: 100;*/
-/*    opacity: 0.7;*/
-/*    filter: alpha(opacity=70);*/
-/*}*/
-
-/*.movingBox p {*/
-/*    display: table-cell;*/
-/*    vertical-align: middle;*/
-/*    text-align: center;*/
-/*    font-family: truenosemibold, Arial, sans-serif;*/
-/*    font-size: 20px;*/
-/*}*/
 
 .aptError {
     border: solid 1px red;
